few changes in expense

--- a/templates/expense.html
+++ b/templates/expense.html
@@ -88,7 +88,6 @@ li a:hover {
               <h3 align='left'>Description</h3>
               <h3 align='left'>Amount</h3>
 
-
             </div>
             <div class="card-action">
               
@@ -96,6 +95,14 @@ li a:hover {
           </div>
         </div>
       </div>
+
+
+    
+
+<p>    {{  expense_array | safe }}   </p>
+
+
+
 
 
 
