Expense Almost completed

--- a/templates/add_expense.html
+++ b/templates/add_expense.html
@@ -55,7 +55,7 @@ li a:hover {
   <li><a href="/purchase">Purchase</a></li>
   <li><a href="/selling">Selling</a></li>
   <li><a href="/orders">Orders</a></li>
-  <li><a href="/expense/">Expense</a></li>
+  <li><a href="/add_expense/">Expense</a></li>
 </ul>
 
 
@@ -73,12 +73,13 @@ li a:hover {
               </form>
             </div>
             <div class="card-action">
-              
             </div>
           </div>
         </div>
       </div>
       <hr>
+
+    <h3><a href="/show_expense/"> Show Expenses</a></h3>
 
 </head>
 </body>
