--- a/templates/show_expense.html
+++ b/templates/show_expense.html
@@ -1,6 +1,6 @@
 <html>
 
-<title>Expenses</title>
+<title>Show Expenses</title>
 
 
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,10 +18,12 @@
 <body>
 
 
-    <div id="showData"></div>
+    
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+
+
 
 <script type="text/javascript">
 
@@ -42,12 +44,12 @@
 //    document.getElementById("show_amount").innerHTML = obj['amount'];
 //  }
 
-  
+
    
 // });
 
-$( document ).ready(function() {
-
+//$( document ).ready(function() {
+function showdata(){
 
   var response_data=  {{ expense_array | safe }};
         
@@ -94,7 +96,7 @@ $( document ).ready(function() {
 
    
 
-
+       var sum=0;
 
 
 
@@ -103,42 +105,89 @@ $( document ).ready(function() {
         var table_row =''
         table_row+='<tr><td>'+response_data[i]['title']+'</td>';
         table_row+='<td>'+response_data[i]['description']+'</td>';
-        table_row+='<td>'+response_data[i]['amount']+'</td></tr>';
-    
+        table_row+='<td>'+response_data[i]['amount']+'</td>';
+        table_row+='<td>'+response_data[i]['created']+'</td>';
+        table_row+='<td>'+response_data[i]['modified']+'</td></tr>';    
        
 
         $("#table1").append(table_row);
         
 }
 
-});
+
+}
+//});
+
+
+
+
+function filter()
+{
+
+
+
+
+
+
+}
 
 </script>
 
-<!--  <div id="showData"> <br></div> --> 
-
-<!-- <p id='show_title'>  </p>
-<p id='show_description'>  </p>
-<p id='show_amount'>  </p> -->
 
 
 
-<!-- Table is creating here  -->
+<!-- Card is here -->
+
+<div>
+
+     <div class="row" >
+        <div class="col s12 m2"></div>
+        <div class="col s12 m8">
+          <div class="card white darken-1" background-color="#FFD700" >
+            <div class="card-content black-text">
+         <ul class="collection with-header">
+            <center>
+               <li class="collection-header"><h5 id="order_placed">Expences</h5></li>        
+            </center>    
+            <input type="date" name="start_date">
+            <input type="date" name="end_date">
+          </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+ <center><a class=" waves-effect waves-light btn" id="show" onclick=showdata() name="show">Show Details</a>
+<br><br>
+<center><a class=" waves-effect waves-light btn" id="show" onclick=showdata() name="show2">Filter</a>
+<br><br>
+
+</div>
+    
 
 
 
-<table id = "table1"  class = "bordered">
+<!-- Card is here -->
+
+
+
+<!-- Table is created here  -->
+
+<table id = "table1"  class = "striped">
     <thead>
           <tr>
               <th data-field="title">Title</th>
               <th data-field="description">Description</th>
               <th data-field="amount">Amount</th>
+              <th data-field="created">Created</th>
+              <th data-field="modified">Modified</th>
           </tr>
         </thead>
 
  </table>
 
 
+<!-- Table is created here  -->
 
 
 
