--- a/templates/testing.html
+++ b/templates/testing.html
@@ -8,122 +8,31 @@
 
 
 
-</style>
-
+<div>
 
      <div class="row" >
         <div class="col s12 m2"></div>
         <div class="col s12 m8">
           <div class="card white darken-1" background-color="#FFD700" >
             <div class="card-content black-text">
-     		 <ul class="collection with-header">
-        		<center>
-       				 <li class="collection-header"><h5 id="order_placed">List Of Expences</h5></li>
-				
-        		</center>
-
-				<!-- <table class="highlight">        		
-        		<tbody>
-        		<tr>
-        		<th><h6 id="order_id">Order Id </h6>
-        		</th>
-        		<th><h6 id="name">Name </h6>
-        		</th>
-        		<th><h6 id="mobile">Contact </h6></th>
-        		</tr>
-        		</tbody>
-        		</table> -->
-
-        		 <table class="striped centered" id="product_list_table" >
-		        <thead>
-        		  <tr>
-              		<th data-field="name">Amount</th>
-              		<th data-field="quantity">Description</th>
-              		<th data-field="price">Title</th>
-                  <!-- <th data-field="price">Amount</th> -->
-
-          			</tr>
-        		</thead>
-        		<tbody>
-        			
-
-        		</tbody>
-
-        		</table>
-			
-        	</ul>
+         <ul class="collection with-header">
+            <center>
+               <li class="collection-header"><h5 id="order_placed">Expences</h5></li>        
+            </center>    
+            <input type="date" name="start_date">
+            <input type="date" name="end_date">
+          </ul>
       </div>
     </div>
   </div>
 </div>
 
- <!-- <center><a class=" waves-effect waves-light btn" id="print" onclick=printContent() name="place_order">Print Invoice</a>
+ <center><a class=" waves-effect waves-light btn" id="show" onclick=printContent() name="show">Show Details</a>
 <br><br>
- <a class=" waves-effect waves-light btn" id="redirect" onclick="Redirect()" name="redirect">Place New Order</a></center> -->
 
 
- <!-- 
-<div>
-<div id="invoice" hidden>
-
-
-<table width="100%">
-<tbody>
-<tr>
-<td>
-<table style="font-size: 10;" width="100%">
-<tbody>
-<tr><th colspan="4">
-<p style="font-size: 20;">Sandwich Junction</p>
-</th></tr>
-<tr>
-<td id="branch_print" colspan="4" align="center">
-
-</td>
-</tr>
-<tr><td colspan="4"><hr></td></tr>
-<tr><td colspan=4><br></td></tr>
-<tr>
-<td style="text-align: left;" align="center">
-<p>OrderId:</p>
-</td>
-<td id="order_id_print" style="text-align: left;" align="center">
-<p></p>
-</td>
-<td style="text-align: left;" align="center">
-<p>Date:</p>
-</td>
-<td id="date_bill" style="text-align: left;" align="center">
-<p></p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" align="center">
-<p>Name:</p>
-</td>
-<td id="name_print" style="text-align: left;" align="center">
-<p></p>
-</td>
-<td style="text-align: left;" align="center">
-<p>Mobile:</p>
-</td>
-<td id="mobile_print" style="text-align: left;" align="center">
-<p></p>
-</td>
-</tr>
-</tbody>
-</table>
-<br />
-<div>
-<style scoped>
-.border_custom tr td,.border_custom tr th{
-   border: 1px solid black;
-}
-</style>
-
-
-
- -->
+</div>
+    
 
 
 
