--- a/templates/place_orders.html
+++ b/templates/place_orders.html
@@ -7,19 +7,39 @@
 
 function place_order()
 {
-	var qty=document.getElementById("quantity").value;
-	var price=document.getElementById("price").value;
-	var i=1;
 
-	var total = qty * price;
-	alert(total);
-	$("#total").append(total);
+
+	
+  var customer_name=document.getElementById("customer_name").value;
+  var tax_id=document.getElementById("tax_id").value;
+
+  
+
+  var item_name;
+  var quantity;
+  var price;
+
+  var item_list=[];
+
+
+  for(var i=1;i<=3;i++)
+  {
+    var obj={};
+    obj['item_name']=document.getElementById("item_name"+i.toString()).value;
+    obj['quantity']=document.getElementById("quantity"+i.toString()).value;
+    obj['price']=document.getElementById("price"+i.toString()).value;
+
+    item_list.push(obj);
+
+  }
+
+
+  alert(item_list[1]['item_name']);
+
+
 
 
 }
-
-
-
 
 
 </script>
@@ -42,29 +62,45 @@ function place_order()
     <div class="row">
         <div class="col s14 m3"></div>
         <div class="col s14 m6">
-<form method="POST">
-<input type="text" id="customer_name"  placeholder="Customer Name" class="tags">
 
 
 <div>
+<input type="text" id="customer_name"  placeholder="Customer Name">
+<input type="text" id="tax_id"  placeholder="Tax Id">
+</div>
+</div>
+<div class="col s14 m3"></div>
+</div>
 
      <div class="row" >
         <div class="col s12 m2"></div>
         <div class="col s12 m8">
           <div class="card white darken-1" background-color="#FFD700" >
-           <div>
-           	
-          <input type="text" id = "item_name" name = "item_name" placeholder="Item name" class="tags">
-          <input type="number" id = "quantity" name = "quantity" placeholder="Quantity" class="tags">
-          <input type="number" id = "price" name = "price" placeholder="Price" class="tags">
+           <div class="row">
+            <table><tr><td>         	
+          <input type="text" id = "item_name1" name = "item_name" placeholder="Item name"></td><td>
+          <input type="number" id = "quantity1" name = "quantity" placeholder="Quantity"></td><td>
+          <input type="number" id = "price1" name = "price" placeholder="Price"></td></tr>
           <!-- <input type="text" id = "unit" placeholder="Unit" class="tags"> -->
+          </table>
+          <table><tr><td>           
+          <input type="text" id = "item_name2" name = "item_name" placeholder="Item name"></td><td>
+          <input type="number" id = "quantity2" name = "quantity" placeholder="Quantity"></td><td>
+          <input type="number" id = "price2" name = "price" placeholder="Price"></td></tr>
+          <!-- <input type="text" id = "unit" placeholder="Unit" class="tags"> -->
+          </table>
+          </table>
+          <table><tr><td>           
+          <input type="text" id = "item_name3" name = "item_name" placeholder="Item name"></td><td>
+          <input type="number" id = "quantity3" name = "quantity" placeholder="Quantity"></td><td>
+          <input type="number" id = "price3" name = "price" placeholder="Price"></td></tr>
+          <!-- <input type="text" id = "unit" placeholder="Unit" class="tags"> -->
+          </table>
           <button class="btn" type= "submit" name="submit" onclick="place_order()" >Add</button>
-          </form>
-      </div>
           
-      </div>
+      </div>  
+   </div>
     </div>
-  </div>
 </div> 
 
 
